--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Bookmyshow</title>
 </head>
 <body>
@@ -43,59 +43,59 @@
 
         <div class="movies">
             <div class="card">
-                <img class="card_images" src="./img1.avif" alt="movies image">
+                <img class="card_images" src="img1.avif" alt="movies image">
                 <h2>Singham</h2>
             </div>
 
             <div class="card">
-                <img class="card_images" src="./img2.avif" alt="movies image">
+                <img class="card_images" src="img2.avif" alt="movies image">
                 <h2>Singham</h2>
             </div>
 
             <div class="card">
-                <img class="card_images" src="./img3.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-
-            <div class="card">
-                <img class="card_images" src="./img4.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-            <div class="card">
-                <img class="card_images" src="./img5.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-            <div class="card">
-                <img class="card_images" src="./img6.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-            <div class="card">
-                <img class="card_images" src="./img7.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-            <div class="card">
-                <img class="card_images" src="./mg8.avif" alt="movies image">
-                <h2>Singham</h2>
-            </div>
-
-            <div class="card">
-                <img class="card_images" src="./img1.avif" alt="movies image">
+                <img class="card_images" src="img3.avif" alt="movies image">
                 <h2>Singham</h2>
             </div>
 
 
             <div class="card">
-                <img class="card_images" src="./img1.avif" alt="movies image">
+                <img class="card_images" src="img4.avif" alt="movies image">
                 <h2>Singham</h2>
             </div>
 
             <div class="card">
-                <img class="card_images" src="./img1.avif" alt="movies image">
+                <img class="card_images" src="img5.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+            <div class="card">
+                <img class="card_images" src="img6.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+            <div class="card">
+                <img class="card_images" src="img7.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+            <div class="card">
+                <img class="card_images" src="mg8.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+            <div class="card">
+                <img class="card_images" src="img1.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+
+            <div class="card">
+                <img class="card_images" src="img1.avif" alt="movies image">
+                <h2>Singham</h2>
+            </div>
+
+            <div class="card">
+                <img class="card_images" src="img1.avif" alt="movies image">
                 <h2>Singham</h2>
             </div>
 
@@ -107,7 +107,7 @@
 
       <footer>
         <div class="footer_image">
-        <img  src="./bottom.avif" alt="bottom image">
+        <img  src="bottom.avif" alt="bottom image">
     </div>
       </footer>
 </body>
